# relay

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  docker-compose.override.yaml.example  docker-compose.yaml  env.example  init.sh  pyproject.toml  shell.nix
.github/workflows/: ci-no-dns.yaml  ci.yaml  deploy.yaml  docker-build.yaml  docker-ci.yaml  docker-deploy.yaml  docker-dispatch.yaml  docs-preview.yaml  docs.yaml  reusable-test-tls-external.yaml  test-and-deploy-docker-ipv4only.yaml  test-and-deploy-docker.yaml  test-and-deploy-ipv4only.yaml  test-and-deploy.yaml  test-tls-external.yaml  trigger-docker-build.yaml
chatmaild/: pyproject.toml
cmdeploy/: pyproject.toml
doc/: Makefile  README.md
doc/source/: architecture.rst  conf.py  docker.rst  faq.rst  getting_started.rst  index.rst  iponly.rst  lxc.rst  migrate.rst  migrate_control_machine.rst  overview.rst  related.rst  remove.rst  troubleshooting.rst
doc/tool/: lxc_test_en.md  lxc_test_fa.md
docker/: build.sh  chatmail-init.service  chatmail-init.sh  chatmail_relay.dockerfile  cm_ini_to_env.py  docker-compose-default.yaml  docker-compose-traefik.yaml  docker-compose.ci.yaml  docker-compose.override.yaml.example  docker-compose.yaml  entrypoint.sh  example-traefik.env  example.env  healthcheck.sh
docker/files/: chatmail-certmon.service  chatmail-certmon.sh  entrypoint.sh  (+4 more)
docs/: DOCKER_INSTALLATION_EN.md  DOCKER_INSTALLATION_RU.md
scripts/: build-docs.sh  cmdeploy  create_cloudflare_records.sh  initenv.sh
test/: lxc_runner.py
traefik/: config.yaml  post-hook.sh
(+118 files in other folders)
